package grpc

import (
	"context"
	"net"

	"google.golang.org/grpc"

	"github.com/weaviate/weaviate/adapters/handlers/indices/grpc/proto"
	"github.com/weaviate/weaviate/adapters/handlers/rest/state"
)

// IndicesServer implements the IndicesService gRPC service
type IndicesServer struct {
	address string
	proto.UnimplementedIndicesServiceServer
	// Add any dependencies needed for handling indices operations
	// For example:
	// - Database connection
	// - Configuration
	// - Other services
}

// NewIndicesServer creates a new instance of IndicesServer
func NewIndicesServer(appState *state.State) *IndicesServer {
	return &IndicesServer{address: ""}
}

// StartServer starts the gRPC server on the specified address
func (s *IndicesServer) StartServer() error {
	lis, err := net.Listen("tcp", s.address)
	if err != nil {
		return err
	}

	server := grpc.NewServer()
	proto.RegisterIndicesServiceServer(server, s)
	return server.Serve(lis)
}

// Object operations
func (s *IndicesServer) PutObject(ctx context.Context, req *proto.PutObjectRequest) (*proto.PutObjectResponse, error) {
	// TODO: Implement PutObject
	return &proto.PutObjectResponse{}, nil
}

func (s *IndicesServer) BatchPutObjects(ctx context.Context, req *proto.BatchPutObjectsRequest) (*proto.BatchPutObjectsResponse, error) {
	// TODO: Implement BatchPutObjects
	return &proto.BatchPutObjectsResponse{}, nil
}

func (s *IndicesServer) GetObject(ctx context.Context, req *proto.GetObjectRequest) (*proto.GetObjectResponse, error) {
	// TODO: Implement GetObject
	return &proto.GetObjectResponse{}, nil
}

func (s *IndicesServer) DeleteObject(ctx context.Context, req *proto.DeleteObjectRequest) (*proto.DeleteObjectResponse, error) {
	// TODO: Implement DeleteObject
	return &proto.DeleteObjectResponse{}, nil
}

func (s *IndicesServer) BatchDeleteObjects(ctx context.Context, req *proto.BatchDeleteObjectsRequest) (*proto.BatchDeleteObjectsResponse, error) {
	// TODO: Implement BatchDeleteObjects
	return &proto.BatchDeleteObjectsResponse{}, nil
}

func (s *IndicesServer) MergeObject(ctx context.Context, req *proto.MergeObjectRequest) (*proto.MergeObjectResponse, error) {
	// TODO: Implement MergeObject
	return &proto.MergeObjectResponse{}, nil
}

func (s *IndicesServer) MultiGetObjects(ctx context.Context, req *proto.MultiGetObjectsRequest) (*proto.MultiGetObjectsResponse, error) {
	// TODO: Implement MultiGetObjects
	return &proto.MultiGetObjectsResponse{}, nil
}

// Search operations
func (s *IndicesServer) SearchShard(ctx context.Context, req *proto.SearchShardRequest) (*proto.SearchShardResponse, error) {
	// TODO: Implement SearchShard
	return &proto.SearchShardResponse{}, nil
}

func (s *IndicesServer) Aggregate(ctx context.Context, req *proto.AggregateRequest) (*proto.AggregateResponse, error) {
	// TODO: Implement Aggregate
	return &proto.AggregateResponse{}, nil
}

// Shard operations
func (s *IndicesServer) GetShardQueueSize(ctx context.Context, req *proto.GetShardQueueSizeRequest) (*proto.GetShardQueueSizeResponse, error) {
	// TODO: Implement GetShardQueueSize
	return &proto.GetShardQueueSizeResponse{}, nil
}

func (s *IndicesServer) GetShardStatus(ctx context.Context, req *proto.GetShardStatusRequest) (*proto.GetShardStatusResponse, error) {
	// TODO: Implement GetShardStatus
	return &proto.GetShardStatusResponse{}, nil
}

func (s *IndicesServer) UpdateShardStatus(ctx context.Context, req *proto.UpdateShardStatusRequest) (*proto.UpdateShardStatusResponse, error) {
	// TODO: Implement UpdateShardStatus
	return &proto.UpdateShardStatusResponse{}, nil
}

func (s *IndicesServer) CreateShard(ctx context.Context, req *proto.CreateShardRequest) (*proto.CreateShardResponse, error) {
	// TODO: Implement CreateShard
	return &proto.CreateShardResponse{}, nil
}

func (s *IndicesServer) ReInitShard(ctx context.Context, req *proto.ReInitShardRequest) (*proto.ReInitShardResponse, error) {
	// TODO: Implement ReInitShard
	return &proto.ReInitShardResponse{}, nil
}
